--- a/Day16_19062023/style.css
+++ b/Day16_19062023/style.css
@@ -1,3 +1,8 @@
+html{
+    /* font-size: 62.5%; */
+    font-size: 10px;
+}
+
 body {
     font-family: "Montserrat", sans-serif;
     line-height: 1.4;
@@ -10,14 +15,16 @@ body {
 }
 
 .content h1 {
-    font-size: 30px;
+    /* font-size: 30px; */
+    font-size: 3rem;
     font-weight: 600;
 }
 
 .content h2 {
     display: inline-block;
     margin-top: 10px;
-    font-size: 24px;
+    /* font-size: 24px; */
+    font-size: 2.4rem;
     font-weight: 500;
     border-left: 3px solid tomato;
     padding-left: 10px;
@@ -31,6 +38,7 @@ body {
     margin-top: 15px;
     margin-bottom: 15px;
     line-height: 1.4;
+    font-size: 1.6rem;
 }
 
 .content img {
@@ -40,6 +48,7 @@ body {
 .content figcaption {
     margin-top: 8px;
     text-align: center;
-    font-size: 16px;
+    /* font-size: 16px; */
+    font-size: 1.6rem;
     font-style: italic;
 }
